--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     color: #2c3e50;
     background-color: #fdf6e3;
     padding: 20px;
-    background-image: url('E:/Task One/images/image2.png');
+    background-image: url('images/image2.png');
     background-repeat: repeat;
 }
 
@@ -115,7 +115,7 @@ section p {
 }
 
 section#about {
-    background-image: url('E:/Task One/images/image1.jpg');
+    background-image: url('images/image1.jpg');
     background-size: cover;
     background-position: center;
     color: #fff;
